update based on receiving info on gleo orders

--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -45,7 +45,7 @@ import CodeExample from './CodeExample.astro';
 
     <div class="bg-yellow-50 p-6 rounded-lg border-2 border-black">
       <h3 class="text-xl font-bold mb-3">Security &amp; Privacy</h3>
-      <p class="text-lg">The integration is limited to discount code management only. Gleo cannot access your orders, inventory, customer data, or any other store information.</p>
+      <p class="text-lg">The integration's permissions are carefully scoped to handle discount code management and track redemptions. Gleo only receives information about transactions where our discount codes are used. We cannot access your general orders, inventory, customer data, or any other store information.</p>
     </div>
 
     <CodeExample />
