gleo endpoint url added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -293,7 +293,7 @@ import IntroSection from '../components/IntroSection.astro';
               <ul class="list-disc pl-6 space-y-2">
                 <li>Add an action and select <strong>Flow > Send HTTP Request</strong></li>
                 <li>Set HTTP Method to <strong>POST</strong></li>
-                <li>Enter the Gleo endpoint URL (provided separately)</li>
+                <li>Enter the Gleo endpoint URL (https://devapi.gleo.club/api/reward/webhook/v2/order/paid)</li>
                 <li>Add header:
                   <code class="block bg-gray-100 p-2 mt-2 rounded">
                     Content-Type: application/json
